[gd_scene load_steps=9 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.3, 0.5, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.3, 0.4, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.15, 0.25, 0.4, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.3, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.1, 0.1, 0.2, 1, 0.15, 0.15, 0.3, 1, 0.2, 0.2, 0.4, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
fill_from = Vector2(0, 0)
fill_to = Vector2(0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("GradientTexture2D_1")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
theme_override_constants/separation = 20

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Logo" type="TextureRect" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
custom_minimum_size = Vector2(128, 128)
texture = ExtResource("2")
stretch_mode = 4

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "HERO SMASH"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Battle for Glory"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
text = "PLAY"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
text = "CREDITS"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
text = "EXIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
text = "v0.1.0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]